libradiantcoredir = $(pkglibdir)/modules
libradiantcore_LTLIBRARIES = libradiantcore.la

libradiantcore_la_CPPFLAGS = -DPKGLIBDIR='"$(pkglibdir)"' \
              -DPKGDATADIR='"$(pkgdatadir)"' \
              -DLOCALEDIR='"$(localedir)"' \
              -DHTMLDIR='"$(htmldir)"' \
              -I$(top_srcdir)/include \
              -I$(top_srcdir)/libs \
              $(LIBSIGC_CFLAGS) \
              $(XML_CFLAGS) \
              $(FTGL_CFLAGS)

libradiantcore_la_LIBADD = $(top_builddir)/libs/scene/libscenegraph.la \
             $(top_builddir)/libs/xmlutil/libxmlutil.la \
             $(top_builddir)/libs/math/libmath.la

libradiantcore_la_LDFLAGS = -module -avoid-version \
                    $(XML_LIBS) \
                    $(GLEW_LIBS) \
                    $(GL_LIBS) \
                    $(GLU_LIBS) \
                    $(JPEG_LIBS) \
                    $(PNG_LIBS) \
                    $(FTGL_LIBS) \
                    $(LIBSIGC_LIBS) \
                    $(FILESYSTEM_LIBS) \
                    $(DL_LIBS) \
                    $(INTL_LIBS) \
                    $(Z_LIBS)

libradiantcore_la_SOURCES = Radiant.cpp \
                brush/Brush.cpp \
                brush/BrushModule.cpp \
                brush/BrushNode.cpp \
                brush/Face.cpp \
                brush/FaceInstance.cpp \
                brush/FacePlane.cpp \
                brush/FixedWinding.cpp \
                brush/TexDef.cpp \
                brush/TextureMatrix.cpp \
                brush/TextureProjection.cpp \
                brush/Winding.cpp \
                brush/csg/CSG.cpp \
                brush/export/CollisionModel.cpp \
                clipper/BrushByPlaneClipper.cpp \
                clipper/ClipPoint.cpp \
                clipper/Clipper.cpp \
                clipper/SplitAlgorithm.cpp \
                commandsystem/CommandSystem.cpp \
                eclass/Doom3EntityClass.cpp \
                eclass/EClassManager.cpp \
                entity/ShaderParms.cpp \
                entity/EntitySettings.cpp \
                entity/KeyValueObserver.cpp \
                entity/EntityNode.cpp \
                entity/RotationMatrix.cpp \
                entity/target/TargetManager.cpp \
                entity/target/TargetLineNode.cpp \
                entity/target/TargetKeyCollection.cpp \
                entity/target/TargetKey.cpp \
                entity/target/TargetableNode.cpp \
                entity/light/Renderables.cpp \
                entity/light/Light.cpp \
                entity/light/LightNode.cpp \
                entity/eclassmodel/EclassModelNode.cpp \
                entity/RotationKey.cpp \
                entity/NameKeyObserver.cpp \
                entity/doom3group/Doom3GroupNode.cpp \
                entity/doom3group/Doom3Group.cpp \
                entity/NamespaceManager.cpp \
                entity/generic/GenericEntity.cpp \
                entity/generic/GenericEntityNode.cpp \
                entity/speaker/SpeakerNode.cpp \
                entity/speaker/SpeakerRenderables.cpp \
                entity/Doom3Entity.cpp \
                entity/ModelKey.cpp \
                entity/KeyValue.cpp \
                entity/curve/CurveCatmullRom.cpp \
                entity/curve/Curve.cpp \
                entity/curve/CurveEditInstance.cpp \
                entity/curve/CurveNURBS.cpp \
                entity/AngleKey.cpp \
                entity/EntityModule.cpp \
                filetypes/FileTypeRegistry.cpp \
                filters/BasicFilterSystem.cpp \
                filters/XMLFilter.cpp \
                filters/XmlFilterEventAdapter.cpp \
                fonts/FontLoader.cpp \
                fonts/GlyphInfo.cpp \
                fonts/GlyphSet.cpp \
                fonts/FontManager.cpp \
                grid/GridManager.cpp \
                imagefile/BMPLoader.cpp \
                imagefile/dds.cpp \
                imagefile/ddslib.cpp \
                imagefile/DDSImage.cpp \
                imagefile/ImageLoader.cpp \
                imagefile/JPEGLoader.cpp \
                imagefile/PNGLoader.cpp \
                imagefile/TGALoader.cpp \
                layers/LayerInfoFileModule.cpp \
                layers/LayerModule.cpp \
                layers/LayerManager.cpp \
                log/COutRedirector.cpp \
                log/LogFile.cpp \
                log/LogStream.cpp \
                log/LogStreamBuf.cpp \
                log/LogWriter.cpp \
                log/StringLogDevice.cpp \
                map/aas/AasFileManager.cpp \
                map/aas/Doom3AasFileLoader.cpp \
                map/aas/Doom3AasFileSettings.cpp \
                map/aas/Doom3AasFile.cpp \
                map/algorithm/Export.cpp \
                map/algorithm/Import.cpp \
                map/algorithm/MapExporter.cpp \
                map/algorithm/MapImporter.cpp \
                map/algorithm/Models.cpp \
                map/algorithm/Skins.cpp \
                map/format/MapFormatManager.cpp \
                map/format/Quake3MapFormat.cpp \
                map/format/Quake4MapFormat.cpp \
                map/format/Doom3MapFormat.cpp \
                map/format/Doom3MapReader.cpp \
                map/format/Doom3PrefabFormat.cpp \
                map/format/portable/PortableMapFormat.cpp \
                map/format/portable/PortableMapWriter.cpp \
                map/format/portable/PortableMapReader.cpp \
                map/format/Quake3MapReader.cpp \
                map/format/Doom3MapWriter.cpp \
                map/format/primitiveparsers/PatchDef2.cpp \
                map/format/primitiveparsers/Patch.cpp \
                map/format/primitiveparsers/PatchDef3.cpp \
                map/format/primitiveparsers/BrushDef3.cpp \
                map/format/primitiveparsers/BrushDef.cpp \
                map/format/Quake4MapReader.cpp \
                map/infofile/InfoFile.cpp \
                map/infofile/InfoFileExporter.cpp \
                map/infofile/InfoFileManager.cpp \
                map/mru/MRU.cpp \
                map/namespace/ComplexName.cpp \
                map/namespace/Namespace.cpp \
                map/namespace/NamespaceFactory.cpp \
                map/AutoSaver.cpp \
                map/CounterManager.cpp \
                map/EditingStopwatch.cpp \
                map/EditingStopwatchInfoFileModule.cpp \
                map/Map.cpp \
                map/MapFileManager.cpp \
                map/MapModules.cpp \
                map/MapPosition.cpp \
                map/MapPositionManager.cpp \
                map/MapPropertyInfoFileModule.cpp \
                map/MapResource.cpp \
                map/MapResourceManager.cpp \
                map/PointFile.cpp \
                map/RegionManager.cpp \
                map/RootNode.cpp \
                model/md5/MD5Skeleton.cpp \
                model/md5/MD5Module.cpp \
                model/md5/MD5Model.cpp \
                model/md5/MD5ModelLoader.cpp \
                model/md5/MD5AnimationCache.cpp \
                model/md5/MD5Surface.cpp \
                model/md5/MD5Anim.cpp \
                model/md5/MD5ModelNode.cpp \
                model/export/AseExporter.cpp \
                model/export/Lwo2Chunk.cpp \
                model/export/Lwo2Exporter.cpp \
                model/export/ModelExporter.cpp \
                model/export/ModelScalePreserver.cpp \
                model/export/ScaledModelExporter.cpp \
                model/export/WavefrontExporter.cpp \
                model/picomodel/PicoModelLoader.cpp \
                model/picomodel/PicoModelModule.cpp \
                model/picomodel/PicoModelNode.cpp \
                model/picomodel/RenderablePicoModel.cpp \
                model/picomodel/RenderablePicoSurface.cpp \
                model/picomodel/lib/pm_md3.c \
                model/picomodel/lib/pm_md2.c \
                model/picomodel/lib/pm_obj.c \
                model/picomodel/lib/picointernal.c \
                model/picomodel/lib/picomodules.c \
                model/picomodel/lib/pm_lwo.c \
                model/picomodel/lib/pm_mdc.c \
                model/picomodel/lib/pm_fm.c \
                model/picomodel/lib/pm_ase.c \
                model/picomodel/lib/picomodel.c \
                model/picomodel/lib/lwo/envelope.c \
                model/picomodel/lib/lwo/surface.c \
                model/picomodel/lib/lwo/clip.c \
                model/picomodel/lib/lwo/lwob.c \
                model/picomodel/lib/lwo/lwio.c \
                model/picomodel/lib/lwo/lwo2.c \
                model/picomodel/lib/lwo/list.c \
                model/picomodel/lib/lwo/pntspols.c \
                model/picomodel/lib/lwo/vmap.c \
                model/picomodel/lib/lwo/vecmath.c \
                model/picomodel/lib/pm_terrain.c \
                model/picomodel/lib/pm_ms3d.c \
                model/picomodel/lib/pm_3ds.c \
                model/ModelCache.cpp \
                model/ModelFormatManager.cpp \
                model/NullModel.cpp \
                model/NullModelNode.cpp \
                modulesystem/ModuleLoader.cpp \
                modulesystem/ModuleRegistry.cpp \
                particles/ParticleDef.cpp \
                particles/ParticleNode.cpp \
                particles/ParticleParameter.cpp \
                particles/ParticlesManager.cpp \
                particles/RenderableParticle.cpp \
                particles/RenderableParticleBunch.cpp \
                particles/RenderableParticleStage.cpp \
                particles/StageDef.cpp \
                patch/Patch.cpp \
                patch/PatchModule.cpp \
                patch/PatchNode.cpp \
                patch/PatchRenderables.cpp \
                patch/PatchTesselation.cpp \
                patch/algorithm/General.cpp \
                patch/algorithm/Prefab.cpp \
                rendersystem/backend/glprogram/ARBBumpProgram.cpp \
                rendersystem/backend/glprogram/ARBDepthFillProgram.cpp \
                rendersystem/backend/glprogram/GenericVFPProgram.cpp \
                rendersystem/backend/glprogram/GLSLBumpProgram.cpp \
                rendersystem/backend/glprogram/GLSLDepthFillProgram.cpp \
                rendersystem/backend/OpenGLShader.cpp \
                rendersystem/backend/GLProgramFactory.cpp \
                rendersystem/backend/OpenGLShaderPass.cpp \
                rendersystem/LinearLightList.cpp \
                rendersystem/OpenGLRenderSystem.cpp \
                rendersystem/RenderSystemFactory.cpp \
                rendersystem/SharedOpenGLContextModule.cpp \
                rendersystem/debug/SpacePartitionRenderer.cpp \
                scenegraph/SceneGraph.cpp \
                scenegraph/Octree.cpp \
                scenegraph/SceneGraphFactory.cpp \
                selection/algorithm/Curves.cpp \
                selection/algorithm/Entity.cpp \
                selection/algorithm/General.cpp \
                selection/algorithm/Group.cpp \
                selection/algorithm/GroupCycle.cpp \
                selection/algorithm/Patch.cpp \
                selection/algorithm/Planes.cpp \
                selection/algorithm/Primitives.cpp \
                selection/algorithm/Shader.cpp \
                selection/algorithm/Transformation.cpp \
                selection/clipboard/Clipboard.cpp \
                selection/group/SelectionGroupInfoFileModule.cpp \
                selection/group/SelectionGroupManager.cpp \
                selection/group/SelectionGroupModule.cpp \
                selection/manipulators/DragManipulator.cpp \
                selection/manipulators/ManipulatorBase.cpp \
                selection/manipulators/ManipulatorComponents.cpp \
                selection/manipulators/RotateManipulator.cpp \
                selection/manipulators/ModelScaleManipulator.cpp \
                selection/manipulators/ScaleManipulator.cpp \
                selection/manipulators/TranslateManipulator.cpp \
                selection/selectionset/SelectionSetManager.cpp \
                selection/selectionset/SelectionSetInfoFileModule.cpp \
                selection/selectionset/SelectionSet.cpp \
                selection/selectionset/SelectionSetModule.cpp \
                selection/shaderclipboard/ClosestTexturableFinder.cpp \
                selection/shaderclipboard/ShaderClipboard.cpp \
                selection/shaderclipboard/Texturable.cpp \
                selection/RadiantSelectionSystem.cpp \
                selection/ManipulationPivot.cpp \
                selection/SelectedNodeList.cpp \
                selection/SelectionTestWalkers.cpp \
                selection/TransformationVisitors.cpp \
                settings/Game.cpp \
                settings/GameManager.cpp \
                settings/LanguageManager.cpp \
                settings/PreferencePage.cpp \
                settings/PreferenceSystem.cpp \
                shaders/CameraCubeMapDecl.cpp \
                shaders/textures/GLTextureManager.cpp \
                shaders/textures/TextureManipulator.cpp \
                shaders/CShader.cpp \
                shaders/Doom3ShaderLayer.cpp \
                shaders/Doom3ShaderSystem.cpp \
                shaders/MapExpression.cpp \
                shaders/ShaderExpression.cpp \
                shaders/ShaderLibrary.cpp \
                shaders/ShaderTemplate.cpp \
                shaders/TableDefinition.cpp \
                skins/Doom3SkinCache.cpp \
                undo/UndoSystem.cpp \
                vfs/DeflatedInputStream.cpp \
                vfs/DirectoryArchive.cpp \
                vfs/Doom3FileSystem.cpp \
                vfs/Doom3FileSystemModule.cpp \
                vfs/ZipArchive.cpp \
                xmlregistry/RegistryTree.cpp \
                xmlregistry/XMLRegistry.cpp

